@@ -3,10 +3,10 @@ DEPEND=dev-libs/openssl sys-apps/util-linux sys-apps/help2man sys-boot/gnu-efi v
 DESCRIPTION=Utilities for signing and verifying files for UEFI Secure Boot
 EAPI=4
 HOMEPAGE=https://launchpad.net/ubuntu/+source/sbsigntool
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-3
 RDEPEND=dev-libs/openssl sys-apps/util-linux
 SLOT=0
 SRC_URI=https://launchpad.net/ubuntu/+archive/primary/+files/sbsigntool_0.6.orig.tar.gz
 _eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=0a2f323378651114488d86e6a6cda37d
+_md5_=427c30edc6a836c466889f579e58235b
